@@ -1,5 +1,26 @@
+2008-04-04  Carlos O'Donell  <carlos@codesourcery.com>
+
+	* sysdeps/unix/sysv/linux/hppa/bits/atomic.h: Remove
+	memory contraint and instead indicate that *mem is
+	written to.
+
+Index: ports/sysdeps/unix/sysv/linux/hppa/bits/atomic.h
+===================================================================
+RCS file: /cvs/glibc/ports/sysdeps/unix/sysv/linux/hppa/bits/atomic.h,v
+retrieving revision 1.3
+retrieving revision 1.4
+diff -u -d -p -r1.3 -r1.4
 --- ports/sysdeps/unix/sysv/linux/hppa/bits/atomic.h	3 Dec 2006 23:03:20 -0000	1.3
 +++ ports/sysdeps/unix/sysv/linux/hppa/bits/atomic.h	4 Apr 2008 18:57:47 -0000	1.4
+@@ -55,7 +55,7 @@ typedef uintmax_t uatomic_max_t;
+ #define LWS "0xb0"
+ #define LWS_CAS "0"
+ /* Note r31 is the link register */
+-#define LWS_CLOBBER "r1", "r26", "r25", "r24", "r23", "r22", "r21", "r20", "r28", "r31", "memory"
++#define LWS_CLOBBER "r1", "r26", "r25", "r24", "r23", "r22", "r21", "r20", "r28", "r31"
+ #define ASM_EAGAIN "11" 
+ 
+ #if __ASSUME_LWS_CAS
 @@ -76,7 +76,7 @@ typedef uintmax_t uatomic_max_t;
  	"stw	%%r28, %0			\n\t"			\
          "sub	%%r0, %%r21, %%r21		\n\t"			\
